Conversion des liens wikilinks->markdown

--- a/docs/Wiki/0. Index.md
+++ b/docs/Wiki/0. Index.md
@@ -1,4 +1,5 @@
 ## Nomenclature
-Pour vous référer à la nomenclature définie, veuillez consulter le document suivant: [[Nomenclature]]
+Pour vous référer à la nomenclature définie, veuillez consulter le document suivant: [Nomenclature](Nomenclature.md)
 ## Guides & Divers
-- Guide pour le [[Workflow Github]]
+- Guide pour le [Workflow Github](Workflow%20Github.md)
+- 
