--- a/docs/Wiki/UX/0.indexUX.md
+++ b/docs/Wiki/UX/0.indexUX.md
@@ -1,13 +1,13 @@
 
 Recherche et analyse
-[benchmark](benchmark.md)
+[benchmarks](benchmarks.md)
 [sondageAuditeurs](sondageAuditeurs.md)
 [entretienAnimateurs](entretienAnimateurs.md)
 
 Personas
 [personaAnimateurs](personaAnimateurs.md)
 [personaAuditeurs](personaAuditeurs.md)
-[narration](narration.md)
+[narrations](narrations.md)
 
 Preuves de conception itérative
 [paperPrototypeAuditeurs](paperPrototypeAuditeurs.md)
